# csharp_wannabe

./: Cargo.toml  README.md
desktop_ui/: Cargo.toml  tauri.conf.json
desktop_ui/src/: main.rs
my_models/: Cargo.toml
my_models/src/: lib.rs  my_model.rs
pgsql_provider/: Cargo.toml
pgsql_provider/src/: lib.rs  pgsql.rs
repository_traits/: Cargo.toml
repository_traits/src/: lib.rs  my_traits.rs
service/: Cargo.toml
service/src/: app_state.rs  main.rs
service/src/controllers/: mod.rs  my_controller.rs
ui/: index.html
